force-app/main/default/objects/OpportunityTeamMember/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <label>期待収益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>