force-app/main/default/objects/OpportunityTeamMember/fields/saiyoukingaku__c.field-meta.xml
<CustomField>
    <fullName>saiyoukingaku__c</fullName>
    <label>採用金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>